# Homework

CV/opencv_HW1/: Report_HW1.docx
CV/opencv_HW1/src/: main.cpp
CV/opencv_HW2/: CMakeLists.txt  Report_HW2.docx  main.sh
CV/opencv_HW2/src/: CMakeLists.txt  main.cpp
CV/opencv_HW3/: CMakeLists.txt  Homework Assignment HW03.pptx  Report_HW3.docx
CV/opencv_HW3/src/: CMakeLists.txt  main.cpp
FLTK/FLTK_1/: CMakeLists.txt  Readme.txt
FLTK/FLTK_1/FLTK_windows/: HW1.sln
FLTK/FLTK_1/FLTK_windows/Debug/: HW1.ilk
FLTK/FLTK_1/FLTK_windows/HW1/: HW1.vcxproj  Source.cpp
FLTK/FLTK_1/FLTK_windows/HW1/Debug/: source.obj.enc  vc141.idb
FLTK/FLTK_1/FLTK_windows/HW1/Debug/HW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FLTK/FLTK_1/src/: CMakeLists.txt  main.cpp
FLTK/FLTK_HW2/: CMakeLists.txt
FLTK/FLTK_HW2/include/: BMP_IO.h
FLTK/FLTK_HW2/src/: CMakeLists.txt  main.cpp
FLTK/FLTK_HW3/: CMakeLists.txt  Readme.txt
FLTK/FLTK_HW3/include/: READ_BMP.h  SMFLoader.h
FLTK/FLTK_HW3/src/: CMakeLists.txt  SMFLoader.cpp  main.cpp
FLTK/FLTK_HW4/: CMakeLists.txt  test.cpp
FLTK/FLTK_HW4/src/: main.cpp
PR/PR_HW1/: PR_4.m  document.aux  document.tex
PR/PR_HW2/: HW2_3.m  HW2_4.m  PR.m  document.aux  document.tex
